toqqer-qc-permission.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toqqer-qc

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
