deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: toqqer-test
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: toqqer-test-pvc
      containers:
        - name: cms
          image: toqqer/toqqer:ovh20
          imagePullPolicy: IfNotPresent
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "java -jar CMS-Service-0.0.1-SNAPSHOT.jar" ]
          envFrom: []
          ports:
            - containerPort: 8012
          volumeMounts:
            - name: persistent-storage
              mountPath: "/data"
          resources:
            requests:
              cpu: 100m
              memory: 100M
              ephemeral-storage: "1Gi"     # <-- add this
            limits:
              cpu: 600m
              memory: 1600M
              ephemeral-storage: "2Gi" 
          readinessProbe:
            tcpSocket:
              port: 8012
            initialDelaySeconds: 120
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8012
            initialDelaySeconds: 120
            periodSeconds: 20
