service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
  namespace: toqqer-test
spec:
  type: NodePort
  selector:
    app: cms
  ports:
    - port: 8080         # Port inside the cluster
      targetPort: 8080   # Port the container listens on
      nodePort: 30080
